# jalLijiye

./: .gitignore  README.md  pyproject.toml  setup.py  setup_py2app.py
app/: __init__.py  alerter.py  config.py  detector.py  main.py  menu_bar.py  paths.py  presence.py  state_machine.py  types.py
config/: defaults.yaml
data/bottle/: README.md  data.yaml
launchd/: com.prateek.jallijiye.plist
scripts/: auto_label_with_model.py  autostart_macos.sh  build_macos_app.sh  coco_to_yolo.py  extract_frames.py  package_colab_dataset.py  package_roboflow_upload.py  record_webcam.py  split_dataset.py  train_bottle_model.sh
tests/: test_detector_mapping.py  test_drink_heuristic.py  test_event_sequences.py  test_presence_signal.py  test_state_machine.py
